improve description head

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="name" description="La pokédex como nunca antes la habías visto">
+    <meta content="name" description="La pokédex mas completa y bonita como no has visto.">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Pokéapi reiniciada</title>
