fix: appearing distance changed, changed motive and added text when hover anchor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <main class="main" id="lista_pokemon"></main>
         
         <a href="#body" class="anchor-top" id="anchor_top">
-            <span class="loader"></span>
+            <span class="legend">Ir arriba</span>
+            <img src="assets/pika-tail.svg" alt="Ir arriba">
         </a>
 
         <script src="./scripts/main.js" type="module"></script>
