--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body id="body">
     <header class="header-pokeapi">
         <h1 class="logo"><img src="./assets/logo3.webp" alt="logo pokéapi" title="pokeapi.co"></h1>
-        <nav>
-            <ul><!-- COMMENTSSSSSSSSSSSS-->
+        <nav id="nav-container">
+            <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
                 <li class="tipos aleatorio"><button class="btnTipo" id="aleatorio">40 Al Azar</button></li>
                 <li class="tipos todos"><button class="btnTipo" id="todos">Todos</button></li>
                 <li class="tipos normal"><button class="btnTipo" id="normal">Normal</button></li>
@@ -34,7 +34,7 @@
                 <li class="tipos dark"><button class="btnTipo" id="dark">Siniestro</button></li>
                 <li class="tipos fairy"><button class="btnTipo" id="fairy">Hada</button></li>
             </ul>
-            <ul>
+            <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
                 <li class="tipos generaciones"><button class="btnTipo" id="gen1">1ª Gen</button></li>
                 <li class="tipos generaciones"><button class="btnTipo" id="gen2">2ª Gen</button></li>
                 <li class="tipos generaciones"><button class="btnTipo" id="gen3">3ª Gen</button></li>
@@ -54,7 +54,7 @@
         <main class="main" id="lista_pokemon"></main>
         
         <a href="#body" class="anchor-top" id="anchor_top">
-            <span class="legend">Ir arriba</span>
+            <!-- <span class="legend">Ir arriba</span> -->
             <img src="assets/pika-tail.svg" alt="Ir arriba">
         </a>
 
