change tittle and clean

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="content" description="La pokédex mas completa y bonita como no has visto.">
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-        <title>Pokéapi reiniciada</title>
+        <title>Mi Pokéapi optimizada, 1302 pokémon.</title>
     </head>
     <body id="body">
         
@@ -55,7 +55,6 @@
         <aside id="aside">
             <section class="loader" id="loader"></section>
             <a href="#body" class="anchor-top" id="anchor_top">
-                <!-- <span class="legend">Ir arriba</span> -->
                 <img src="assets/pika-tail.svg" alt="Ir arriba">
             </a>
         </aside>
