clean and format code, improvements, meta name description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="content" description="La pokédex mas completa y bonita como no has visto.">
+        <meta name="description" content="No es pokémon.com, es un acceso rápido a todos los pokémon por 'tipo ó generación', un proyecto de prueba con la pokeapi.co.">
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
         <title>Mi Pokéapi optimizada, 1302 pokémon.</title>
