code in progress

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
             <h1 class="logo"><img src="./assets/logo3.webp" alt="logo pokéapi" title="pokeapi.co"></h1>
             <nav id="nav-container">
                 <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
-                    <li class="tipos aleatorio"><button class="btnTipo" id="aleatorio">40 Al Azar</button></li>
-                    <li class="tipos todos"><button class="btnTipo" id="todos">Todos</button></li>
-                    <li class="tipos normal"><button class="btnTipo" id="normal">Normal</button></li>
-                    <li class="tipos fighting"><button class="btnTipo" id="fighting">Lucha</button></li>
-                    <li class="tipos flying"><button class="btnTipo" id="flying">Volador</button></li>
-                    <li class="tipos poison"><button class="btnTipo" id="poison">Veneno</button></li>
-                    <li class="tipos ground"><button class="btnTipo" id="ground">Tierra</button></li>
-                    <li class="tipos rock"><button class="btnTipo" id="rock">Roca</button></li>
-                    <li class="tipos bug"><button class="btnTipo" id="bug">Bicho</button></li>
-                    <li class="tipos ghost"><button class="btnTipo" id="ghost">Fantasma</button></li>
-                    <li class="tipos steel"><button class="btnTipo" id="steel">Acero</button></li>
-                    <li class="tipos fire"><button class="btnTipo" id="fire">Fuego</button></li>
-                    <li class="tipos water"><button class="btnTipo" id="water">Agua</button></li>
-                    <li class="tipos grass"><button class="btnTipo" id="grass">Planta</button></li>
-                    <li class="tipos electric"><button class="btnTipo" id="electric">Eléctrico</button></li>
-                    <li class="tipos psychic"><button class="btnTipo" id="psychic">Psíquico</button></li>
-                    <li class="tipos ice"><button class="btnTipo" id="ice">Hielo</button></li>
-                    <li class="tipos dragon"><button class="btnTipo" id="dragon">Dragón</button></li>
-                    <li class="tipos dark"><button class="btnTipo" id="dark">Siniestro</button></li>
-                    <li class="tipos fairy"><button class="btnTipo" id="fairy">Hada</button></li>
+                    <li class="tipos aleatorio active"><button class="btnTipo action" id="aleatorio">40 Al Azar</button></li>
+                    <li class="tipos vistos"><button class="btnTipo action" id="vistos">Vistos</button></li>
+                    <li class="tipos normal"><button class="btnTipo type" id="normal">Normal</button></li>
+                    <li class="tipos fighting"><button class="btnTipo type" id="fighting">Lucha</button></li>
+                    <li class="tipos flying"><button class="btnTipo type" id="flying">Volador</button></li>
+                    <li class="tipos poison"><button class="btnTipo type" id="poison">Veneno</button></li>
+                    <li class="tipos ground"><button class="btnTipo type" id="ground">Tierra</button></li>
+                    <li class="tipos rock"><button class="btnTipo type" id="rock">Roca</button></li>
+                    <li class="tipos bug"><button class="btnTipo type" id="bug">Bicho</button></li>
+                    <li class="tipos ghost"><button class="btnTipo type" id="ghost">Fantasma</button></li>
+                    <li class="tipos steel"><button class="btnTipo type" id="steel">Acero</button></li>
+                    <li class="tipos fire"><button class="btnTipo type" id="fire">Fuego</button></li>
+                    <li class="tipos water"><button class="btnTipo type" id="water">Agua</button></li>
+                    <li class="tipos grass"><button class="btnTipo type" id="grass">Planta</button></li>
+                    <li class="tipos electric"><button class="btnTipo type" id="electric">Eléctrico</button></li>
+                    <li class="tipos psychic"><button class="btnTipo type" id="psychic">Psíquico</button></li>
+                    <li class="tipos ice"><button class="btnTipo type" id="ice">Hielo</button></li>
+                    <li class="tipos dragon"><button class="btnTipo type" id="dragon">Dragón</button></li>
+                    <li class="tipos dark"><button class="btnTipo type" id="dark">Siniestro</button></li>
+                    <li class="tipos fairy"><button class="btnTipo type" id="fairy">Hada</button></li>
                 </ul>
                 <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen1">1ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen2">2ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen3">3ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen4">4ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen5">5ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen6">6ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen7">7ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen8">8ª Gen</button></li>
-                    <li class="tipos generaciones"><button class="btnTipo" id="gen9">9ª Gen</button></li>
-                    <li class="tipos especial"><button class="btnTipo" id="especial">Especial</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen1">1ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen2">2ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen3">3ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen4">4ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen5">5ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen6">6ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen7">7ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen8">8ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generaciones" id="gen9">9ª Gen</button></li>
+                    <li class="tipos especial"><button class="btnTipo especial" id="especial">Especial</button></li>
                 </ul>
             </nav>
         </header>
