make functions for generations buttons and improvements.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     <li class="tipos fairy"><button class="btnTipo type" id="fairy">Hada</button></li>
                 </ul>
                 <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen1">1ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen2">2ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen3">3ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen4">4ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen5">5ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen6">6ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen7">7ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen8">8ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generaciones" id="gen9">9ª Gen</button></li>
-                    <li class="tipos especial"><button class="btnTipo especial" id="especial">Especial</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-i">1ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-ii">2ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-iii">3ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-iv">4ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-v">5ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-vi">6ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-vii">7ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-viii">8ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-ix">9ª Gen</button></li>
+                    <li class="tipos especial"><button class="btnTipo generations" id="especial">Especial</button></li>
                 </ul>
             </nav>
         </header>
