Add generations image, title on generation buttons, update todo.txt

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                     <li class="tipos fairy"><button class="btnTipo type" id="fairy">Hada</button></li>
                 </ul>
                 <ul class="btn-container"><!-- BOTONERA 🎮 btn-container -->
-                    <li class="tipos"><button class="btnTipo generations" id="generation-i">1ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-ii">2ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-iii">3ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-iv">4ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-v">5ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-vi">6ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-vii">7ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-viii">8ª Gen</button></li>
-                    <li class="tipos"><button class="btnTipo generations" id="generation-ix">9ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-i" title="Kanto">1ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-ii" title="Johto">2ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-iii" title="Hoenn">3ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-iv" title="Sinnoh">4ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-v" title="Unova/Teselia">5ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-vi" title="Kalos">6ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-vii" title="Alola">7ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-viii" title="Galar">8ª Gen</button></li>
+                    <li class="tipos"><button class="btnTipo generations" id="generation-ix" title="Paldea/Hisui">9ª Gen</button></li>
                     <li class="tipos especial"><button class="btnTipo generations" id="especial">Especial</button></li>
                 </ul>
             </nav>
