--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </aside>
     
         <script src="./scripts/main.js" type="module"></script>
-        <script src="./scripts/scroll-top.js" type="module"></script>
+        <!--<script src="./scripts/scroll-top.js" type="module"></script>-->
         <script src="./scripts/css-js/active.js"></script>
     
     </body>
